--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,8 @@ main {
 }
 
 .current-temperature {
-  font-size: 48px;
+  font-size: 60px;
+  margin-top: 22px;
 }
 
 .current-weather {
@@ -73,20 +74,22 @@ main {
 
 .current-temperature-icon {
   position: relative;
-  top: -8px;
-  font-size: 40px;
+  top: -5px;
+  font-size: 30px;
   margin-right: 10px;
 }
 
 .current-temperature-value {
   font-size: 80px;
   font-weight: bold;
+  position: relative;
+  top: -25px;
 }
 
 .current-temperature-unit {
   font-size: 28px;
   position: relative;
-  top: -38px;
+  top: -60px;
 }
 
 footer {
